@@ -1,3 +1,10 @@
+lod2demo (1.1.9) lod2; urgency=low
+
+  * add switch for local virtuoso access as Virtuoso has a different port on
+    localhost.
+
+ -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 24 Aug 2011 15:41:58 -0700
+
 lod2demo (1.1.8) lod2; urgency=low
 
   * add extra lod2 stack dependencies
